--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "npm": "^10.2.1",
     "pg": "^8.11.2",
     "sqlite3": "^5.1.2",
     "uuid": "^9.0.0",
