--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         name: Build and test
         uses: docker/build-push-action@v5
         with:
-          context: ./DockerFile
+          context: .
           target: test
           load: true
       -
