--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
+        name: List directory contents
+        run: ls -l
+      -  
         name: Build and test
         uses: docker/build-push-action@v5
         with:
